Add name to footer, Add instructions to sidebar

--- a/index.html
+++ b/index.html
@@ -31,12 +31,15 @@
             <p>
               This site is built using JavaScript and JSON.
             </p>
+            <p>
+              Clink a post title to read the post. Clink the VanillaPress at the top to return to the list of posts.
+            </p>
           </div>
 
         </div>
 
         <div class="footer">
-          <p>Made with JavaScript &hearts;</p>
+          <p>Made with JavaScript &hearts; by Allen Henry Careful Danger Francis of Assisi Bale Acherbo Junior</p>
         </div>
 
       </div>
