Add sort dropdown to page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
             <p>
               Clink a post title to read the post. Clink the VanillaPress at the top to return to the list of posts.
             </p>
+            <select id="sortOptions">
+              <option value="byDateDescending">Newest to Oldest</option>
+              <option value="byDateAscending">Oldest to Newest</option>
+              <option value="byIdDescending">ID: High to Low</option>
+              <option value="byIdAscending">ID: Low to High</option>
+              <option value="byModifiedDescending">Last Modified: Most Recent First</option>
+              <option value="byModifiedAscending">Last Modified: Most Recent Last</option>
+              <option value="byTitleDescending">Z to A</option>
+              <option value="byTitleAscending">A to Z</option>
+            </select>
           </div>
 
         </div>
