--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
               Clink a post title to read the post. Clink the VanillaPress at the top to return to the list of posts.
             </p>
             <select id="sortOptions">
-              <option value="byDateDescending">Newest to Oldest</option>
-              <option value="byDateAscending">Oldest to Newest</option>
-              <option value="byIdDescending">ID: High to Low</option>
-              <option value="byIdAscending">ID: Low to High</option>
-              <option value="byModifiedDescending">Last Modified: Most Recent First</option>
-              <option value="byModifiedAscending">Last Modified: Most Recent Last</option>
-              <option value="byTitleDescending">Z to A</option>
-              <option value="byTitleAscending">A to Z</option>
+              <option data-sort-option="date" data-sort-direction="descending">Newest to Oldest</option>
+              <option data-sort-option="date" data-sort-direction="ascending">Oldest to Newest</option>
+              <option data-sort-option="id" data-sort-direction="descending">ID: High to Low</option>
+              <option data-sort-option="id" data-sort-direction="ascending">ID: Low to High</option>
+              <option data-sort-option="modified" data-sort-direction="descending" data-sort="modified" data-sort="descending">Most Recently Modified</option>
+              <option data-sort-option="modified" data-sort-direction="ascending">Least Recently Modified</option>
+              <option data-sort-option="title" data-sort-direction="descending">Z to A</option>
+              <option data-sort-option="title" data-sort-direction="ascending">A to Z</option>
             </select>
           </div>
 
