Finish conversion to MVC file structure

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <option data-sort-option="date" data-sort-direction="ascending">Oldest to Newest</option>
               <option data-sort-option="id" data-sort-direction="descending">ID: High to Low</option>
               <option data-sort-option="id" data-sort-direction="ascending">ID: Low to High</option>
-              <option data-sort-option="modified" data-sort-direction="descending" data-sort="modified" data-sort="descending">Most Recently Modified</option>
+              <option data-sort-option="modified" data-sort-direction="descending">Most Recently Modified</option>
               <option data-sort-option="modified" data-sort-direction="ascending">Least Recently Modified</option>
               <option data-sort-option="title" data-sort-direction="descending">Z to A</option>
               <option data-sort-option="title" data-sort-direction="ascending">A to Z</option>
