Add empty nav element

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
         <div class="content">
 
+          <nav id="mainNav">
+            <ul>
+            </ul>
+          </nav>
+
           <div class="primary">
             <h2 id="pageTitle"></h2>
             <div id="pageContent">
